# plasmatube

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.plasmatube.appdata.xml  org.kde.plasmatube.desktop  org.kde.plasmatube.desktop.license  org.kde.plasmatube.json  org.kde.plasmatube.svg.license
src/: CMakeLists.txt  MediaFormat.cpp  MediaFormat.h  Messages.sh  PlasmaTubeSettings.kcfg  PlasmaTubeSettings.kcfg.license  PlasmaTubeSettings.kcfgc  accountmanager.cpp  accountmanager.h  channelcontroller.cpp  channelcontroller.h  commentsmodel.cpp  commentsmodel.h  config.kcfg  config.kcfgc  constants.h  invidiousinstancesmodel.cpp  invidiousmanager.cpp  invidiousmanager.h  logincontroller.cpp  logincontroller.h  main.cpp  mpvobject.cpp  mpvobject.h  peertubeinstancesmodel.cpp  plasmatube.cpp  plasmatube.h  playlistsmodel.cpp  playlistsmodel.h  qthelper.hpp  resources.qrc  searchmodel.cpp  searchmodel.h  sourceconfig.kcfg  sourceconfig.kcfgc  sourcemanager.cpp  sourcemanager.h  subscriptioncontroller.cpp  subscriptioncontroller.h  subscriptionwatcher.cpp  (+17 more)
src/api/: CMakeLists.txt  abstractapi.cpp  abstractapi.h  caption.cpp  caption.h  channel.cpp  channel.h  comment.cpp  comment.h  credentials.cpp  credentials.h  mediaformat.cpp  mediaformat.h  paginator.cpp  paginator.h  playlist.cpp  playlist.h  preferences.cpp  preferences.h  qinvidiousglobal.h  searchparameters.cpp  searchparameters.h  searchresult.cpp  searchresult.h  video.cpp  video.h  videobasicinfo.cpp  videobasicinfo.h  videothumbnail.cpp  videothumbnail.h
src/api/invidious/: invidiousapi.cpp  invidiousapi.h
src/api/peertube/: peertubeapi.cpp  peertubeapi.h
src/api/piped/: pipedapi.cpp  pipedapi.h
src/api/youtube/: youtubeapi.cpp  youtubeapi.h
src/autotests/: CMakeLists.txt  linkparsertest.cpp
src/contents/ui/: AccountPage.qml  ChannelPage.qml  FeedPage.qml  HistoryPage.qml  InvidiousSourcePage.qml  LoginPage.qml  Main.qml  PeerTubeSourcePage.qml  PlaylistGridItem.qml  PlaylistPage.qml  PlaylistsPage.qml  PopularPage.qml  SearchPage.qml  SettingsPage.qml  SourceSwitcher.qml  SubscriptionsPage.qml  TrendingPage.qml  VideoControls.qml  VideoGridItem.qml  VideoListAction.qml  VideoListItem.qml  VideoMenu.qml  VideoPage.qml  YTMSearchPage.qml  main.qml  utils.js
src/contents/ui/components/: BottomNavBar.qml  Comments.qml  ShareDialog.qml  ShareMenu.qml  Sidebar.qml  SourceSwitcher.qml  SubscriptionButton.qml  VideoListItem.qml  utils.js
src/contents/ui/loginflow/: AddPeerTubePage.qml  WelcomePage.qml
src/contents/ui/settings/: NetworkProxyPage.qml  SettingsPage.qml
src/contents/ui/videoplayer/: FloatingVideoPreview.qml  MinimizedVideoPlayer.qml  PictureInPictureVideo.qml  TabIndicator.qml  VideoControls.qml  VideoData.qml  (+2 more)
src/controllers/: channelcontroller.cpp  channelcontroller.h  logincontroller.cpp  logincontroller.h  plasmatube.cpp  plasmatube.h  sourcemanager.cpp  sourcemanager.h  sponsorblockcontroller.cpp  sponsorblockcontroller.h  subscriptioncontroller.cpp  subscriptioncontroller.h  subscriptionwatcher.cpp  subscriptionwatcher.h  videocontroller.cpp  videocontroller.h  videoqueue.cpp  videoqueue.h  videosource.cpp  videosource.h  windowcontroller.cpp  windowcontroller.h
src/models/: abstractinstancesmodel.cpp  abstractinstancesmodel.h  abstractlistmodel.cpp  abstractlistmodel.h  commentsmodel.cpp  commentsmodel.h  invidiousinstancesmodel.cpp  invidiousinstancesmodel.h  peertubeinstancesmodel.cpp  peertubeinstancesmodel.h  pipedinstancesmodel.cpp  pipedinstancesmodel.h  playlistsmodel.cpp  playlistsmodel.h  searchmodel.cpp  searchmodel.h  subscriptionlistmodel.cpp  subscriptionlistmodel.h  videolistmodel.cpp  videolistmodel.h  videomodel.cpp  videomodel.h
src/mpris/: mediaplayer2.cpp  mediaplayer2.h  mediaplayer2player.cpp  mediaplayer2player.h  metadata.cpp  metadata.h  mpris2.cpp  mpris2.h
src/qinvidious/: CMakeLists.txt  abstractapi.cpp  abstractapi.h  caption.cpp  caption.h  channel.cpp  comment.cpp  comment.h  credentials.cpp  credentials.h  invidiousapi.cpp  invidiousapi.h  mediaformat.cpp  mediaformat.h  playlist.cpp  playlist.h  preferences.cpp  preferences.h  qinvidiousglobal.h  searchparameters.cpp  searchparameters.h  video.cpp  video.h  videobasicinfo.cpp  videobasicinfo.h  videothumbnail.cpp  videothumbnail.h
src/qinvidious/invidious/: invidiousapi.cpp  invidiousapi.h
src/qinvidious/peertube/: peertubeapi.cpp  peertubeapi.h
src/ui/: ChannelPage.qml  FeedPage.qml  HistoryPage.qml  LoginPage.qml  Main.qml  PlaylistPage.qml  PlaylistsPage.qml  PopularPage.qml  SearchPage.qml  SubscriptionListPage.qml  SubscriptionsPage.qml  TrendingPage.qml
src/ui/android/: ShareAction.qml  ShareMenu.qml
src/ui/components/: BaseGridItem.qml  BaseGridView.qml  BottomNavBar.qml  ChannelGridItem.qml  Comments.qml  PlaceholderItem.qml  PlaylistGridItem.qml  ShareAction.qml  ShareDialog.qml  ShareMenu.qml  Sidebar.qml  SourceSwitcher.qml  SourceSwitcherDialog.qml  SubscriptionButton.qml  VideoGridItem.qml  VideoListAction.qml  VideoListItem.qml  VideoMenu.qml  utils.js
src/ui/loginflow/: AddInvidiousPage.qml  AddPeerTubePage.qml  AddPipedPage.qml  AddYouTubePage.qml  InstancesPage.qml  SelectSourcePage.qml  WelcomePage.qml
src/ui/settings/: AboutKDEPage.qml  AboutPage.qml  AccountCard.qml  BaseSourcePage.qml  GeneralPage.qml  InvidiousSourcePage.qml  NetworkProxyPage.qml  PeerTubeSourcePage.qml  PipedSourcePage.qml  SettingsPage.qml  SettingsView.qml  SourcesPage.qml  YouTubeSourcePage.qml
src/ui/videoplayer/: MinimizedVideoPlayer.qml  PictureInPictureVideo.qml  TabIndicator.qml  VideoControls.qml  VideoData.qml  VideoPlayer.qml  VideoPlayerParent.qml  VideoQueueView.qml
src/utils/: linkparser.cpp  linkparser.h  mpvobject.cpp  mpvobject.h  opmlparser.cpp  opmlparser.h
src/ytmusic/: YTMApiRequest.cpp  YTMApiRequest.h  YTMClient.cpp  YTMClient.h  YTMSearchModel.cpp  YTMSearchModel.h  YTMSearchRequest.cpp  YTMSearchRequest.h  YTMSearchResult.cpp  YTMSearchResult.h  YTMThumbnail.cpp  YTMThumbnail.h  YTMThumbnailSet.cpp  YTMThumbnailSet.h
(+59 files in other folders)
